--- a/index.html
+++ b/index.html
@@ -40,19 +40,11 @@ Marketing Site
 <div class="top-bar" id="mainNavigation">
 <div class="top-bar-left">
 <ul class="menu vertical medium-horizontal">
-<li class="menu-text hide-for-small-only">Marketing Site</li>
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
+<li class="menu-text hide-for-small-only">Marge-Art.com</li>
+
 </ul>
 </div>
-<div class="top-bar-right">
-<ul class="menu vertical medium-horizontal">
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
-<li><a href="#">Five</a></li>
-<li><a href="#">Six</a></li>
-</ul>
-</div>
+
 </div>
 
 <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
@@ -60,20 +52,16 @@ Marketing Site
 <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
 <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
 <li class="is-active orbit-slide">
-<img class="orbit-image" src="https://placehold.it/2000x750&text=1st" alt="Space">
-<figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+<img class="orbit-image" src="welcome3.png" alt="Space">
+<figcaption class="orbit-caption">Welcome</figcaption>
 </li>
 <li class="orbit-slide">
-<img class="orbit-image" src="https://placehold.it/2000x750&text=2nd" alt="Space">
-<figcaption class="orbit-caption">Lets Rocket!</figcaption>
+<img class="orbit-image" src="fluff2.png" alt="Space">
+<figcaption class="orbit-caption">to Marge's Art!</figcaption>
 </li>
 <li class="orbit-slide">
-<img class="orbit-image" src="https://placehold.it/2000x750&text=3nd" alt="Space">
-<figcaption class="orbit-caption">Encapsulating</figcaption>
-</li>
-<li class="orbit-slide">
-<img class="orbit-image" src="https://placehold.it/2000x750&text=4nd" alt="Space">
-<figcaption class="orbit-caption">Outta This World</figcaption>
+<img class="orbit-image" src="margeart2.png" alt="Space">
+<figcaption class="orbit-caption">Marge-Art.com</figcaption>
 </li>
 </ul>
 <nav class="orbit-bullets">
@@ -85,64 +73,58 @@ Marketing Site
 </div>
 <br>
 <div class="text-center">
-<h2>Our Newest Products</h2>
+<h2>Marge's Art</h2>
 <hr>
 </div>
 <article class="grid-container">
 <div class="grid-x grid-margin-x small-up-2 medium-up-2 large-up-4">
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/500x600">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="rainbowpic.jpg">
+<h5>Oil on Canvas 18" by 24"</h5>
+<p>$500</p>
 <a href="#" class="button expanded">Buy</a>
 </div>
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/500x600">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="yarnball_IMG_1107.jpg">
+<h5>Acrylic on Canvas 36" by 48"</h5>
+<p>$1000</p>
 <a href="#" class="button expanded">Buy</a>
 </div>
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/500x600">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="toobs.jpg">
+<h5>Water color 20" by 28"</h5>
+<p>$200</p>
 <a href="#" class="button expanded">Buy</a>
 </div>
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/500x600">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="flower.jpg">
+<h5>Oil on Canvas 12" by 7"</h5>
+<p>$250</p>
 <a href="#" class="button expanded">Buy</a>
 </div>
 </div>
-<hr>
-<div class="grid-x cell">
-<div class="callout small-12 primary">
-<h3>Really big special this week on items.</h3>
-</div>
-</div>
-<hr>
+
 <div class="text-center">
-<h2>Some Other Neat Products</h2>
+<h2>More of Marge's Art</h2>
 <hr>
 </div>
 <div class="grid-x grid-margin-x small-up-2 medium-up-3 large-up-6">
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="skull.jpg">
+<h5>Ink on Paper 12" by 18"</h5>
+<p>$300</p>
 <a href="#" class="button small expanded hollow">Buy</a>
 </div>
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="cray.jpg">
+<h5>Acrylic on Canvas 10" by 7"</h5>
+<p>$150</p>
 <a href="#" class="button small expanded hollow">Buy</a>
 </div>
 <div class="cell">
-<img class="thumbnail" src="https://placehold.it/300x400">
-<h5>Nulla At Nulla Justo, Eget</h5>
-<p>$400</p>
+<img class="thumbnail" src="sea.jpg">
+<h5>Watercolor 18" by 36"</h5>
+<p>$450</p>
 <a href="#" class="button small expanded hollow">Buy</a>
 </div>
 <div class="cell">
@@ -167,118 +149,7 @@ Marketing Site
 <hr>
 <div class="grid-x align-bottom">
 <div class="medium-4 cell">
-<h4>Top Products</h4>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-<div class="medium-4 cell">
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-<div class="medium-4 cell">
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-<div class="media-object">
-<div class="media-object-section">
-<img class="thumbnail" src="https://placehold.it/100x100">
-</div>
-<div class="media-object-section">
-<h5>Nunc Eu Ullamcorper Orci</h5>
-<p>Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque.</p>
-</div>
-</div>
-</div>
-</div>
-</article>
-<br>
-<footer class="callout large secondary">
-<article class="grid-container">
-<div class="grid-x">
-<div class="large-4 cell">
-<h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-<p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
-</h4>
-</div>
-<div class="large-3 large-offset-2 cell">
-<ul class="menu vertical">
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
-</ul>
-</div>
-<div class="large-3 cell">
-<ul class="menu vertical">
-<li><a href="#">One</a></li>
-<li><a href="#">Two</a></li>
-<li><a href="#">Three</a></li>
-<li><a href="#">Four</a></li>
+
 </ul>
 </div>
 </article>
